--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,170 @@
-.App {
-  text-align: center;
+body {
+  padding: 5% 0%;
+  margin: 0;
+  font-size: 14px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.cp_spend {
+  text-align: right;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+thead {
+  border-bottom: 2px solid #94989a;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.seed_bags {
+  text-indent: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+table {
+  border: 2px solid #BDC2C5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+td {
+  text-transform: uppercase;
+} 
+
+.search-box {
+  margin-bottom: 30px;
+  display: inline-block;
+  border-right: 1px solid #DADCDE;
+}
+
+.resultNumb {
+  padding-bottom: 10px;
+}
+
+.form-cheak{
+  top: 67px;
+  left: 575px;
+  width: 12px;
+  height: 7px;
+  /* UI Properties */
+  border: 3px solid #FFFFFF;
+  opacity: 1;
+}
+
+/* State select box */
+select {
+  border:1px solid #ccc;
+  height: 32px;
+  padding: 5px 35px 5px 10px;
+  margin: 0px 15px 0px 0px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url(./images/arrow-down.png) 96% / 8% no-repeat #fff;
+  border-radius: 1px;
+}
+
+/* Input text */
+input[type="text"] {
+box-sizing: border-box;
+-moz-box-sizing: border-box;
+-webkit-box-sizing: border-box;
+height: 32px;
+border:1px solid #ccc;
+margin: 0px 15px 0px 15px;
+width: 240px;
+padding: 0px 10px;
+border-radius: 1px;
+}
+
+
+/* Position the checkboxes */
+.checkContainer {
+  display: inline-block;
+  position: relative;
+  padding-left: 25px;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 18px;
+  vertical-align: top;
+  margin-left: 15px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkContainer input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: transparent;
+  border: 1px solid #2196F3;
+  border-radius: 1px;
+}
+
+/* On mouse-over, add a grey background color */
+.checkContainer:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkContainer input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkContainer input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkContainer .checkmark:after {
+  left: 4px;
+  top: 0px;
+  width: 8px;
+  height: 12px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.checkContainerOne {
+  width: 161px;
+}
+
+.checkContainerTwo {
+  width: 85px;
+}
+
+.search-button {
+  background: transparent;
+  border: none;
+  outline: none;
+  margin-left: -50px;
+  margin-right: 20px;
+}
+
+.search-button img {
+  width: 20px;
+  height: 20px;
+  object-fit: cover;
 }
